ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 55 contains 31 reduce/reduce conflicts.
state 92 contains 2 shift/reduce conflicts.
state 114 contains 1 shift/reduce conflicts and 25 reduce/reduce conflicts.
state 119 contains 1 reduce/reduce conflicts.
state 192 contains 3 shift/reduce conflicts.
state 193 contains 2 reduce/reduce conflicts.
state 194 contains 2 reduce/reduce conflicts.
state 195 contains 4 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 197 contains 2 reduce/reduce conflicts.
state 201 contains 1 shift/reduce conflicts.
state 202 contains 2 reduce/reduce conflicts.
state 212 contains 1 shift/reduce conflicts and 5 reduce/reduce conflicts.
state 214 contains 2 shift/reduce conflicts and 3 reduce/reduce conflicts.
state 215 contains 2 shift/reduce conflicts and 3 reduce/reduce conflicts.
state 216 contains 2 shift/reduce conflicts and 3 reduce/reduce conflicts.
state 217 contains 6 reduce/reduce conflicts.
state 218 contains 2 shift/reduce conflicts and 6 reduce/reduce conflicts.
state 219 contains 2 shift/reduce conflicts and 6 reduce/reduce conflicts.
state 220 contains 2 shift/reduce conflicts and 6 reduce/reduce conflicts.
state 221 contains 2 shift/reduce conflicts and 6 reduce/reduce conflicts.
state 222 contains 4 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 223 contains 4 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 224 contains 2 shift/reduce conflicts and 8 reduce/reduce conflicts.
state 225 contains 2 shift/reduce conflicts and 8 reduce/reduce conflicts.
state 226 contains 3 shift/reduce conflicts and 10 reduce/reduce conflicts.
state 227 contains 3 shift/reduce conflicts and 10 reduce/reduce conflicts.
state 228 contains 13 reduce/reduce conflicts.
state 229 contains 13 reduce/reduce conflicts.
state 230 contains 13 reduce/reduce conflicts.
state 231 contains 4 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 232 contains 4 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 236 contains 1 shift/reduce conflicts.
state 261 contains 3 shift/reduce conflicts.
state 264 contains 1 shift/reduce conflicts.

rule 143 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pInline -> Inline                           (4)
	%start_pArg -> Arg                                 (5)
	%start_pValue -> Value                             (6)
	%start_pValString -> ValString                     (7)
	%start_pListValString -> ListValString             (8)
	%start_pTypeDef -> TypeDef                         (9)
	%start_pStructDef -> StructDef                     (10)
	%start_pStm -> Stm                                 (11)
	%start_pListStm -> ListStm                         (12)
	%start_pExp16 -> Exp16                             (13)
	%start_pExp15 -> Exp15                             (14)
	%start_pExp14 -> Exp14                             (15)
	%start_pExp13 -> Exp13                             (16)
	%start_pExp12 -> Exp12                             (17)
	%start_pExp11 -> Exp11                             (18)
	%start_pExp10 -> Exp10                             (19)
	%start_pExp9 -> Exp9                               (20)
	%start_pExp8 -> Exp8                               (21)
	%start_pExp4 -> Exp4                               (22)
	%start_pExp3 -> Exp3                               (23)
	%start_pExp2 -> Exp2                               (24)
	%start_pExp1 -> Exp1                               (25)
	%start_pExp -> Exp                                 (26)
	%start_pExp5 -> Exp5                               (27)
	%start_pExp6 -> Exp6                               (28)
	%start_pExp7 -> Exp7                               (29)
	%start_pListExp15 -> ListExp15                     (30)
	%start_pType -> Type                               (31)
	%start_pListType -> ListType                       (32)
	%start_pQConst -> QConst                           (33)
	%start_pDecl -> Decl                               (34)
	%start_pListDecl -> ListDecl                       (35)
	%start_pDeclName -> DeclName                       (36)
	%start_pListDeclName -> ListDeclName               (37)
	Ident -> L_ident                                   (38)
	Integer -> L_integ                                 (39)
	Double -> L_doubl                                  (40)
	Char -> L_charac                                   (41)
	String -> L_quoted                                 (42)
	Program -> ListDef                                 (43)
	ListDef ->                                         (44)
	ListDef -> ListDef Def                             (45)
	Def -> Inline Type Ident '(' ListArg ')' '{' ListStm '}'   (46)
	Def -> Inline Type Ident '(' ListArg ')' ';'       (47)
	Def -> TypeDef                                     (48)
	Def -> StructDef                                   (49)
	Def -> 'using' QConst ';'                          (50)
	ListArg ->                                         (51)
	ListArg -> Arg                                     (52)
	ListArg -> Arg ',' ListArg                         (53)
	Inline -> 'inline'                                 (54)
	Inline ->                                          (55)
	Arg -> Type                                        (56)
	Arg -> Type Ident                                  (57)
	Arg -> Type Ident '=' Exp                          (58)
	Value -> Integer                                   (59)
	Value -> Double                                    (60)
	Value -> Char                                      (61)
	Value -> ListValString                             (62)
	ValString -> String                                (63)
	ListValString -> ValString                         (64)
	ListValString -> ValString ListValString           (65)
	TypeDef -> 'typedef' Type Ident ';'                (66)
	StructDef -> 'struct' Ident '{' ListDecl '}' ';'   (67)
	Stm -> Decl ';'                                    (68)
	Stm -> Exp ';'                                     (69)
	Stm -> 'return' Exp ';'                            (70)
	Stm -> 'while' '(' Exp ')' Stm                     (71)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (72)
	Stm -> 'for' '(' Decl ';' Exp ';' Exp ')' Stm      (73)
	Stm -> '{' ListStm '}'                             (74)
	Stm -> 'if' '(' Exp ')' Stm                        (75)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (76)
	Stm -> TypeDef                                     (77)
	Stm -> StructDef                                   (78)
	ListStm ->                                         (79)
	ListStm -> ListStm Stm                             (80)
	Exp16 -> Value                                     (81)
	Exp16 -> Ident                                     (82)
	Exp16 -> '(' Exp ')'                               (83)
	Exp15 -> Exp14 '[' Exp15 ']'                       (84)
	Exp15 -> QConst                                    (85)
	Exp15 -> Exp14 '(' ListExp15 ')'                   (86)
	Exp15 -> Exp16                                     (87)
	Exp14 -> Exp13 '.' Exp14                           (88)
	Exp14 -> Exp13 '->' Exp14                          (89)
	Exp14 -> Exp14 '++'                                (90)
	Exp14 -> Exp14 '--'                                (91)
	Exp14 -> '*' Exp14                                 (92)
	Exp14 -> Exp15                                     (93)
	Exp13 -> '++' Exp14                                (94)
	Exp13 -> '--' Exp14                                (95)
	Exp13 -> '!' Exp14                                 (96)
	Exp13 -> Exp14                                     (97)
	Exp12 -> Exp11 '*' Exp12                           (98)
	Exp12 -> Exp11 '/' Exp12                           (99)
	Exp12 -> Exp11 '%' Exp12                           (100)
	Exp12 -> Exp13                                     (101)
	Exp11 -> Exp10 '+' Exp11                           (102)
	Exp11 -> Exp10 '-' Exp11                           (103)
	Exp11 -> Exp12                                     (104)
	Exp10 -> Exp9 '<<' Exp10                           (105)
	Exp10 -> Exp9 '>>' Exp10                           (106)
	Exp10 -> Exp11                                     (107)
	Exp9 -> Exp8 '<' Exp9                              (108)
	Exp9 -> Exp8 '>' Exp9                              (109)
	Exp9 -> Exp8 '<=' Exp9                             (110)
	Exp9 -> Exp8 '>=' Exp9                             (111)
	Exp9 -> Exp10                                      (112)
	Exp8 -> Exp7 '==' Exp8                             (113)
	Exp8 -> Exp7 '!=' Exp8                             (114)
	Exp8 -> Exp9                                       (115)
	Exp4 -> Exp3 '&&' Exp4                             (116)
	Exp4 -> Exp5                                       (117)
	Exp3 -> Exp2 '||' Exp3                             (118)
	Exp3 -> Exp4                                       (119)
	Exp2 -> Exp1 '=' Exp2                              (120)
	Exp2 -> Exp1 '+=' Exp2                             (121)
	Exp2 -> Exp1 '-=' Exp2                             (122)
	Exp2 -> Exp2 '?' Exp1 ':' Exp1                     (123)
	Exp2 -> Exp3                                       (124)
	Exp1 -> 'throw' Exp1                               (125)
	Exp1 -> Exp2                                       (126)
	Exp -> Exp1                                        (127)
	Exp5 -> Exp6                                       (128)
	Exp6 -> Exp7                                       (129)
	Exp7 -> Exp8                                       (130)
	ListExp15 ->                                       (131)
	ListExp15 -> Exp15                                 (132)
	ListExp15 -> Exp15 ',' ListExp15                   (133)
	Type -> Ident '<' ListType '>'                     (134)
	Type -> Type '&'                                   (135)
	Type -> 'const' Type                               (136)
	Type -> QConst                                     (137)
	ListType ->                                        (138)
	ListType -> Type                                   (139)
	ListType -> Type ',' ListType                      (140)
	QConst -> Ident                                    (141)
	QConst -> QConst '::' QConst                       (142)
	Decl -> Type ListDeclName                          (143)
	Decl -> Type ListDeclName                          (144)
	ListDecl ->                                        (145)
	ListDecl -> ListDecl Decl ';'                      (146)
	DeclName -> Ident                                  (147)
	DeclName -> Ident '=' Exp                          (148)
	ListDeclName ->                                    (149)
	ListDeclName -> DeclName                           (150)
	ListDeclName -> DeclName ',' ListDeclName          (151)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'const'        { PT _ (TS _ 33) }
	'do'           { PT _ (TS _ 34) }
	'else'         { PT _ (TS _ 35) }
	'for'          { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'inline'       { PT _ (TS _ 38) }
	'return'       { PT _ (TS _ 39) }
	'struct'       { PT _ (TS _ 40) }
	'throw'        { PT _ (TS _ 41) }
	'typedef'      { PT _ (TS _ 42) }
	'using'        { PT _ (TS _ 43) }
	'while'        { PT _ (TS _ 44) }
	'{'            { PT _ (TS _ 45) }
	'||'           { PT _ (TS _ 46) }
	'}'            { PT _ (TS _ 47) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pInline  rule  4
	%start_pArg     rule  5
	%start_pValue   rule  6
	%start_pValString rule  7
	%start_pListValString rule  8
	%start_pTypeDef rule  9
	%start_pStructDef rule  10
	%start_pStm     rule  11
	%start_pListStm rule  12
	%start_pExp16   rule  13
	%start_pExp15   rule  14
	%start_pExp14   rule  15
	%start_pExp13   rule  16
	%start_pExp12   rule  17
	%start_pExp11   rule  18
	%start_pExp10   rule  19
	%start_pExp9    rule  20
	%start_pExp8    rule  21
	%start_pExp4    rule  22
	%start_pExp3    rule  23
	%start_pExp2    rule  24
	%start_pExp1    rule  25
	%start_pExp     rule  26
	%start_pExp5    rule  27
	%start_pExp6    rule  28
	%start_pExp7    rule  29
	%start_pListExp15 rule  30
	%start_pType    rule  31
	%start_pListType rule  32
	%start_pQConst  rule  33
	%start_pDecl    rule  34
	%start_pListDecl rule  35
	%start_pDeclName rule  36
	%start_pListDeclName rule  37
	Ident           rule  38
	Integer         rule  39
	Double          rule  40
	Char            rule  41
	String          rule  42
	Program         rule  43
	ListDef         rules 44, 45
	Def             rules 46, 47, 48, 49, 50
	ListArg         rules 51, 52, 53
	Inline          rules 54, 55
	Arg             rules 56, 57, 58
	Value           rules 59, 60, 61, 62
	ValString       rule  63
	ListValString   rules 64, 65
	TypeDef         rule  66
	StructDef       rule  67
	Stm             rules 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78
	ListStm         rules 79, 80
	Exp16           rules 81, 82, 83
	Exp15           rules 84, 85, 86, 87
	Exp14           rules 88, 89, 90, 91, 92, 93
	Exp13           rules 94, 95, 96, 97
	Exp12           rules 98, 99, 100, 101
	Exp11           rules 102, 103, 104
	Exp10           rules 105, 106, 107
	Exp9            rules 108, 109, 110, 111, 112
	Exp8            rules 113, 114, 115
	Exp4            rules 116, 117
	Exp3            rules 118, 119
	Exp2            rules 120, 121, 122, 123, 124
	Exp1            rules 125, 126
	Exp             rule  127
	Exp5            rule  128
	Exp6            rule  129
	Exp7            rule  130
	ListExp15       rules 131, 132, 133
	Type            rules 134, 135, 136, 137
	ListType        rules 138, 139, 140
	QConst          rules 141, 142
	Decl            rules 143, 144
	ListDecl        rules 145, 146
	DeclName        rules 147, 148
	ListDeclName    rules 149, 150, 151

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'const'        reduce using rule 44
	'inline'       reduce using rule 44
	'struct'       reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	L_ident        reduce using rule 44
	%eof           reduce using rule 44

	Program        goto state 146
	ListDef        goto state 147

State 1


	'const'        reduce using rule 44
	'inline'       reduce using rule 44
	'struct'       reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	L_ident        reduce using rule 44
	%eof           reduce using rule 44

	ListDef        goto state 145

State 2


	'const'        reduce using rule 55
	'inline'       shift, and enter state 137
	'struct'       shift, and enter state 125
	'typedef'      shift, and enter state 126
	'using'        shift, and enter state 144
	L_ident        reduce using rule 55

	Def            goto state 140
	Inline         goto state 141
	TypeDef        goto state 142
	StructDef      goto state 143

State 3


	'const'        shift, and enter state 49
	L_ident        shift, and enter state 39
	%eof           reduce using rule 51

	Ident          goto state 45
	ListArg        goto state 138
	Arg            goto state 139
	Type           goto state 135
	QConst         goto state 47

State 4


	'inline'       shift, and enter state 137
	%eof           reduce using rule 55

	Inline         goto state 136

State 5


	'const'        shift, and enter state 49
	L_ident        shift, and enter state 39

	Ident          goto state 45
	Arg            goto state 134
	Type           goto state 135
	QConst         goto state 47

State 6


	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 133
	ValString      goto state 61
	ListValString  goto state 62

State 7


	L_quoted       shift, and enter state 77

	String         goto state 59
	ValString      goto state 132

State 8


	L_quoted       shift, and enter state 77

	String         goto state 59
	ValString      goto state 61
	ListValString  goto state 131

State 9


	'typedef'      shift, and enter state 126

	TypeDef        goto state 130

State 10


	'struct'       shift, and enter state 125

	StructDef      goto state 129

State 11


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	'const'        shift, and enter state 49
	'do'           shift, and enter state 121
	'for'          shift, and enter state 122
	'if'           shift, and enter state 123
	'return'       shift, and enter state 124
	'struct'       shift, and enter state 125
	'throw'        shift, and enter state 96
	'typedef'      shift, and enter state 126
	'while'        shift, and enter state 127
	'{'            shift, and enter state 128
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 114
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	TypeDef        goto state 115
	StructDef      goto state 116
	Stm            goto state 117
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp4           goto state 90
	Exp3           goto state 91
	Exp2           goto state 92
	Exp1           goto state 93
	Exp            goto state 118
	Exp5           goto state 95
	Exp6           goto state 89
	Exp7           goto state 87
	Type           goto state 46
	QConst         goto state 119
	Decl           goto state 120

State 12


	'!'            reduce using rule 79
	'('            reduce using rule 79
	'*'            reduce using rule 79
	'++'           reduce using rule 79
	'--'           reduce using rule 79
	'const'        reduce using rule 79
	'do'           reduce using rule 79
	'for'          reduce using rule 79
	'if'           reduce using rule 79
	'return'       reduce using rule 79
	'struct'       reduce using rule 79
	'throw'        reduce using rule 79
	'typedef'      reduce using rule 79
	'while'        reduce using rule 79
	'{'            reduce using rule 79
	L_ident        reduce using rule 79
	L_integ        reduce using rule 79
	L_doubl        reduce using rule 79
	L_charac       reduce using rule 79
	L_quoted       reduce using rule 79
	%eof           reduce using rule 79

	ListStm        goto state 113

State 13


	'('            shift, and enter state 70
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 111
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 112

State 14


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 110
	Exp14          goto state 65
	Exp13          goto state 66
	QConst         goto state 68

State 15


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 109
	Exp13          goto state 66
	QConst         goto state 68

State 16


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 108
	QConst         goto state 68

State 17


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 107
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp7           goto state 103
	QConst         goto state 68

State 18


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 106
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp7           goto state 103
	QConst         goto state 68

State 19


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 105
	Exp9           goto state 83
	Exp8           goto state 84
	Exp7           goto state 103
	QConst         goto state 68

State 20


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 104
	Exp8           goto state 84
	Exp7           goto state 103
	QConst         goto state 68

State 21


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 102
	Exp7           goto state 103
	QConst         goto state 68

State 22


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	'throw'        shift, and enter state 96
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp4           goto state 101
	Exp3           goto state 91
	Exp2           goto state 92
	Exp1           goto state 99
	Exp5           goto state 95
	Exp6           goto state 89
	Exp7           goto state 87
	QConst         goto state 68

State 23


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	'throw'        shift, and enter state 96
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp4           goto state 90
	Exp3           goto state 100
	Exp2           goto state 92
	Exp1           goto state 99
	Exp5           goto state 95
	Exp6           goto state 89
	Exp7           goto state 87
	QConst         goto state 68

State 24


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	'throw'        shift, and enter state 96
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp4           goto state 90
	Exp3           goto state 91
	Exp2           goto state 98
	Exp1           goto state 99
	Exp5           goto state 95
	Exp6           goto state 89
	Exp7           goto state 87
	QConst         goto state 68

State 25


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	'throw'        shift, and enter state 96
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp4           goto state 90
	Exp3           goto state 91
	Exp2           goto state 92
	Exp1           goto state 97
	Exp5           goto state 95
	Exp6           goto state 89
	Exp7           goto state 87
	QConst         goto state 68

State 26


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	'throw'        shift, and enter state 96
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp4           goto state 90
	Exp3           goto state 91
	Exp2           goto state 92
	Exp1           goto state 93
	Exp            goto state 94
	Exp5           goto state 95
	Exp6           goto state 89
	Exp7           goto state 87
	QConst         goto state 68

State 27


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp5           goto state 88
	Exp6           goto state 89
	Exp7           goto state 87
	QConst         goto state 68

State 28


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77

	Ident          goto state 55
	Integer        goto state 56
	Double         goto state 57
	Char           goto state 58
	String         goto state 59
	Value          goto state 60
	ValString      goto state 61
	ListValString  goto state 62
	Exp16          goto state 63
	Exp15          goto state 78
	Exp14          goto state 65
	Exp13          goto state 79
	Exp12          goto state 80
	Exp11          goto state 81
	Exp10          goto state 82
	Exp9           goto state 83
	Exp8           goto state 84
	Exp6           goto state 86
	Exp7           goto state 87
	QConst         goto state 68

State 29


	'!'            shift, and enter state 69
	'('            shift, and enter state 70
	'*'            shift, and enter state 71
	'++'           shift, and enter state 72
	'--'           shift, and enter state 73
	L_ident        shift, and enter state 39
	L_integ        shift, and enter state 74
	L_doubl        shift, and enter state 75
	L_charac       shift, and enter state 76
	L_quoted       shift, and enter state 77
